--- a/my-app/src/components/SocialMedia/SocialMedia.scss
+++ b/my-app/src/components/SocialMedia/SocialMedia.scss
@@ -1,5 +1,5 @@
 .socialMedia {
-  position: relative;
+  position: absolute;
   width: 24px;
   height: 662.5px;
   left: 148.85px;
@@ -28,7 +28,6 @@
     opacity: 0.5;
   }
   .socialMedia_mediaLine {
-    position: relative;
     box-sizing: border-box;
     margin-top: 80.26px;
   }
